--- a/css/estilo.css
+++ b/css/estilo.css
@@ -24,6 +24,7 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
@@ -113,18 +114,18 @@ header{
     justify-content: space-between;
 }
 .ester{
-    min-width: 100%;
     display: flex;
     background-color: white;
 }
 .leftimg{
-    max-width: 40%;
+    min-width: 40%;
 }
 .imgesteril{
-    max-height: 80%;
+    width: 100%;
+    height: auto;
 }
 .laprimera{
-    max-width: 60%;
+    
     padding-top: 5%;
     padding-left: 5%;
     padding-right: 5%;
