--- a/css/estilo.css
+++ b/css/estilo.css
@@ -84,11 +84,11 @@ header{
     justify-content: center;
     padding-top: 15rem;
 }
-.logohero{   
+.logohero{  
 }
 .articlehero{
     color: white;
-    max-width: 45%;
+    max-width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -166,5 +166,25 @@ footer {
     .ester{
         flex-direction: column;
         padding-bottom: 5%;
+    }
+    .logohero{
+        max-width: 80%;
+        padding-bottom: 30%;
+    }
+    header{
+        padding-top: 25%;
+    }
+    .hero{
+          background-position: center;
+
+    }
+    .downbttn{
+        display: none;
+    }
+    .articlehero{
+        min-width: 100%;
+        box-sizing: border-box;
+        padding: 3%;
+        
     }
   }
