--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -78,13 +78,14 @@ main{
   position: relative;
     
 }
-header{
-    width: 100vw;
+.contlogo{
     display: flex;
     justify-content: center;
-    padding-top: 15rem;
+    padding: 15%;
 }
-.logohero{  
+.logohero{
+    width: 50%;
+    height: auto;
 }
 .articlehero{
     color: white;
@@ -137,6 +138,20 @@ header{
 .primeratext{
     color: #808080;
 }
+.laprimerab{
+    
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: #59BEC9;
+}
+.primeratitleb{
+    color: white;
+    padding-bottom: 5%;
+}
+.primeratextb{
+    color: white;
+}
 .reverse{
     flex-direction: row-reverse;
 }
@@ -145,9 +160,9 @@ footer {
   position: sticky;
   bottom: 0;
   left: 0;
-  background: #1B1B1B;
+  background: white;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   padding: 50px;
     box-sizing: border-box;
     z-index: -1;
@@ -157,13 +172,14 @@ footer {
 .mail{
     font-size: 32px;
     font-weight: 500;
-    color: aliceblue;  
+    color: #59BEC9;  
 }
 .iconocont{
-    padding-top: 5%;
+    padding-top: 15%;
+    width: 100%;
 }
 .iconimg{
-    width: 100%;
+    width: 30%;
     height: auto;
 }
 
