--- a/css/estilo2.css
+++ b/css/estilo2.css
@@ -82,6 +82,7 @@ main{
     display: flex;
     justify-content: center;
     padding: 15%;
+    background-color: white;
 }
 .logohero{
     width: 50%;
