--- a/css/estilo.css
+++ b/css/estilo.css
@@ -145,8 +145,9 @@ footer {
   position: sticky;
   bottom: 0;
   left: 0;
-  background: #1B1B1B;
+  background: white;
   display: flex;
+    flex-direction: column;
   justify-content: space-around;
   padding: 50px;
     box-sizing: border-box;
@@ -157,13 +158,13 @@ footer {
 .mail{
     font-size: 32px;
     font-weight: 500;
-    color: aliceblue;  
+    color: #59BEC9;  
 }
 .iconocont{
     padding-top: 5%;
 }
 .iconimg{
-    width: 100%;
+    width: 5%;
     height: auto;
 }
 
@@ -210,11 +211,11 @@ footer {
         font-size: 20px;
     }
     .iconocont{
-        margin-right: 60%;
+        width: 100%;
         
     }
     .iconimg{
-        width: 50%;
+        width: 10%;
         height: auto;
     }
   }
