--- a/css/estilo.css
+++ b/css/estilo.css
@@ -85,14 +85,15 @@ header{
 }
 .contenedorservicioqs{
     display: flex;
-    
     background-color: #59BEC9;
     z-index: 10;
+    margin-bottom: -.3%;
 }
 .contenedorservicio{
     display: flex;
     background-color: white;
     z-index: 10;
+    width: 100%;
 }
 .contenedorimagenservicio{
     height: auto;
