--- a/css/estilo.css
+++ b/css/estilo.css
@@ -73,10 +73,10 @@ header{
     min-height: 400px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 .contenedorlogo{
     background-color: white;
-    z-index: 10;
     align-self: center;
 }
 .logohero{
@@ -86,13 +86,11 @@ header{
 .contenedorservicioqs{
     display: flex;
     background-color: #59BEC9;
-    z-index: 10;
     margin-bottom: -.3%;
 }
 .contenedorservicio{
     display: flex;
     background-color: white;
-    z-index: 10;
     width: 100%;
 }
 .contenedorimagenservicio{
@@ -146,7 +144,6 @@ footer {
   padding: 50px;
     color: #59BEC9;
     width: 100%;
-    z-index: 0;
 }
 .mail{
     font-size: 32px;
@@ -161,6 +158,59 @@ footer {
     width: 30%;
     height: auto;
 }
+.navbtn{
+    font-size:40px;
+    cursor:pointer;
+    position: sticky;
+    display: flex;
+    justify-content: flex-end;
+    top: 3%;
+    padding-right: 3%;
+    color: #EB451B;
+    
+    
+    
+}
+.overlay {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
 
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
@@ -174,6 +224,8 @@ footer {
         height: auto;
     }
     header{
+        display: flex;
+        flex-direction: row;
     }
     .contenedorlogo{
         padding: 15%;
@@ -225,5 +277,4 @@ footer {
     .contenedortextoserv{
         padding-bottom: 5%;
     }
-    
-  }
+}
