--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,19 +68,58 @@ main{
     display: flex;
     flex-direction: column;
 }
+
+
 header{
     width: 100%;
-    min-height: 400px;
+    min-height: 100vh;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    align-items: flex-start;
+    background-size: cover;
+    backface-visibility: hidden;
+    animation: Hslider 20s normal linear infinite 0s;
+    background-image: url(../img/H-01.jpg), url(../img/H-02.JPG), url(../img/H-03.jpg), url(../img/H-04.jpg), url(../img/H-05.jpg)  ;
 }
+@keyframes Hslider {
+    0%{
+        background-image: url(../img/H-01.jpg);
+    }
+    19%{
+        background-image: url(../img/H-01.jpg);
+    }
+    20%{
+        background-image: url(../img/H-02.JPG);
+    }
+    39%{
+        background-image: url(../img/H-02.JPG);
+    }
+    40%{
+        background-image: url(../img/H-03.jpg);
+    }
+    59%{
+        background-image: url(../img/H-03.jpg);
+    }
+    60%{
+        background-image: url(../img/H-04.jpg);
+    }
+    79%{
+        background-image: url(../img/H-04.jpg);
+    }
+    80%{
+        background-image: url(../img/H-05.jpg);
+    }
+    100%{
+        background-image: url(../img/H-05.jpg);
+    }
+}
+
 .contenedorlogo{
     background-color: white;
-    align-self: center;
+    padding: 2em;
+    
 }
 .logohero{
-    width: 100%;
+    width: 50%;
     height: auto;
 }
 .contenedorservicioqs{
