--- a/css/slider.css
+++ b/css/slider.css
@@ -75,6 +75,7 @@ button{
     padding: 5%;
     background-color: #59BEC9;
     color: white;
+    position: relative;
 }
 .titulo{
     align-self: end;
@@ -132,6 +133,7 @@ button{
         'boton foto';
     padding: 0% 5% 5% 5%;
     color: white;
+    position: relative;
 }
 .SERV2 .titulo{
     color: #59BEC9;
@@ -145,6 +147,7 @@ button{
 .biblioteca{
     background-color: #59BEC9;
     padding: 5%;
+    position: relative;
 }
 form{
     display: flex;
@@ -227,19 +230,38 @@ address{
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-row-gap: 1em;
+    position: relative;
+}
+.svgIZQ{
+    position: absolute;
+    bottom: 0;
+    left: 0%;
+    height: 12vw;
+    fill: #FFF;
+     
+}
+.svgDER{
+    position: absolute;
+    bottom: -1px;
+    right: 0%;
+    height: 12vw;
+    fill: #59bec9;
 }
 .Historia{
     padding: 5%;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    position: relative;
     
 }
+
 .sliderHistoria{
     
 }
 .Equipo{
     padding: 5%;
     background: #59BEC9;
+    position: relative;
     
 }
 .equipoGrid{
@@ -288,7 +310,7 @@ address{
 .Aliados{
     padding: 10%;
     display: grid;
-    grid-template-columns: 1fr 3fr
+    grid-template-columns: 1fr 3fr;
 }
 .Aliados > h3{
     grid-column: 1 / 3;
