optimizando fotos de slider home y agregando tipografia de proyecto

--- a/css/slider.css
+++ b/css/slider.css
@@ -28,6 +28,10 @@ margin-right: 0;
 .nav-link{
     color: white!important;
 }
+
+.compressed{
+    background: #6dcc7c;
+}
 .carousel-item{
     max-height: 100vh;
 }
