--- a/css/slider.css
+++ b/css/slider.css
@@ -37,6 +37,9 @@ body{
     height: 100%;
     overflow-x: hidden;
     font-family: 'wotfardregular';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 /*
 img{
@@ -77,13 +80,14 @@ h3{
 
 .compressed{
     background: white;
-    color: aqua !important;
 }
 .enmobil{
     height: 8rem;
 }
+.enmobilhey{
+    height: 2rem;
+}
 .carousel-item{
-    max-height: 100vh;
 }
 
 .carousel-control-next, .carousel-control-prev{
@@ -103,7 +107,25 @@ h3{
     width: 50%;
     text-align: left;
 }
-
+.btnclaro{
+    background-color: #59B4BF;
+    border: none;
+    border-radius: 15em;
+    padding: 2%;
+    color: white;
+    height: 50px;
+    text-align: center;
+}
+.btnobscuro{
+    background-color: #288992;
+     border: none;
+    border-radius: 15em;
+    padding: 1.5%;
+    color: white;
+    height: 50px;
+    text-align: center;
+    min-width: 200px;
+}
 button{
     background-color: #59B4BF;
     border: none;
@@ -118,13 +140,13 @@ button{
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr 1fr;
     width: 100%;
-    height: 70vh;
+    
     grid-template-areas:
         'titulo .'
         'texto foto'
         'boton foto';
-    padding: 5%;
-    background-color: #59BEC9;
+    padding: 3% 10% 1% 10%;
+    background-color: #59B4BF;
     color: white;
     position: relative;
 }
@@ -154,13 +176,12 @@ button{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr 1fr;
-    width: 100%;
-    height: 50vh;
+    width: 80%;
     grid-template-areas:
-        'foto titulo'
-        'foto texto'
-        'foto boton';
-    padding: 5%;
+        'titulo foto'
+        'texto foto'
+        'boton foto';
+    padding: 5% 0;
     color: white;
 }
 .SERV .titulo{
@@ -170,19 +191,18 @@ button{
     color: #808080
 }
 .SERV .carousel{
-    width: 70%;
+    width: 90%;
 }
 .SERV2{ 
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr 1fr;
-    width: 100%;
-    height: 50vh;
+    width: 80%;
     grid-template-areas:
-        'titulo foto'
-        'texto foto'
-        'boton foto';
-    padding: 0% 5% 5% 5%;
+        'foto titulo'
+        'foto texto'
+        'foto boton';
+    padding: 5% 0;
     color: white;
     position: relative;
 }
@@ -193,10 +213,10 @@ button{
     color: #808080
 }
 .SERV2 .carousel{
-    width: 70%;
+    width: 90%;
 }
 .biblioteca{
-    background-color: #59BEC9;
+    background-color: #288992;
     padding: 5%;
     position: relative;
 }
@@ -214,7 +234,7 @@ footer{
 aside{
     min-width: 50%;
     display: grid;
-    grid-template-columns: 2fr 2fr 1.fr;
+    grid-template-columns: 2fr 2fr 1fr;
     grid-template-rows: auto .5fr 1fr 1fr 2fr;
     grid-gap: .5em;
 }
@@ -223,17 +243,18 @@ aside > h3{
 }
 
 aside > button{
-    grid-column: 1 / span 1;
+    grid-column: 1 / 2;
     grid-row: 3;
     align-self: center;
     justify-self: center;
+    width: 80%;
 }
 aside > button:nth-child(2){
     grid-column: 2 / span 1;
     grid-row: 3;
 }
 aside > button:nth-child(3){
-    grid-column: 2 / span 1;
+    grid-column: 1 / span 1;
     grid-row: 4;
 }
 
@@ -261,7 +282,10 @@ address{
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
-    
+    color: #59B4BF;
+}
+.links a{
+    color: #59B4BF;
 }
 .enviar{
     max-width: 30%;
@@ -273,6 +297,7 @@ address{
 
 .Hstart{
     background: #59BEC9;
+    width: 100%;
 }
 .QS-Azul{
     background: #59BEC9;
@@ -296,7 +321,14 @@ address{
     bottom: -1px;
     right: 0%;
     height: 12vw;
-    fill: #59bec9;
+    fill: #59B4BF;
+}
+.svgDER-o{
+    position: absolute;
+    bottom: -1px;
+    right: -11.5%;
+    height: 12vw;
+    fill: #288992;
 }
 .Historia{
     padding: 5%;
@@ -376,7 +408,10 @@ address{
     grid-column: 2 / 3;
 }
 .Aliados > a{
-    grid-column: 2 / 4
+    grid-column: 2 / 4;
+}
+.bredtitulo{
+    font-family: 'wotfardsemibold';
 }
 @media only screen and (max-width: 800px) {
   .navbar-brand {
