--- a/css/slider.css
+++ b/css/slider.css
@@ -35,7 +35,7 @@
 body{
     width: 100vw;
     height: 100%;
-    overflow-x: hidden;
+    
     font-family: 'wotfardregular';
     display: flex;
     flex-direction: column;
@@ -429,9 +429,44 @@ address{
     .carousel-caption h1{
         font-size: 1.8rem;
     }
-    .QS{
-        grid-template-columns: 1fr;
+    .texto{
+        padding-right: 0;
     }
+    .QS{
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto 1fr;
+        grid-template-areas: 
+            'titulo'
+            'foto'
+            'texto'
+            'boton';
+            
+    }
+    .SERV{
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto 1fr;
+        grid-template-areas: 
+            'titulo'
+            'foto'
+            'texto'
+            'boton';
+    }
+    .SERV .carousel{
+        width: 100%;
+    }
+    .SERV2{
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto 1fr;
+        grid-template-areas: 
+            'titulo'
+            'foto'
+            'texto'
+            'boton';
+    }
+    .SERV2 .carousel{
+        width: 100%;
+    }
+  
     .QS-Azul{
     background: #59BEC9;
     padding: 5%;
