--- a/css/slider.css
+++ b/css/slider.css
@@ -35,7 +35,7 @@
 body{
     width: 100vw;
     height: 100%;
-    
+    color: #666666;
     font-family: 'wotfardregular';
     display: flex;
     flex-direction: column;
@@ -176,12 +176,12 @@ button{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr 1fr;
-    width: 80%;
+    width: 100%;
     grid-template-areas:
         'titulo foto'
         'texto foto'
         'boton foto';
-    padding: 5% 0;
+    padding: 5% 10%;
     color: white;
 }
 .SERV .titulo{
@@ -220,6 +220,12 @@ button{
     padding: 5%;
     position: relative;
 }
+.card-body{
+    padding: 5% 0 0 0;
+}
+.card-text{
+    color: white;
+}
 form{
     display: flex;
     min-width: 50%;
@@ -235,7 +241,7 @@ aside{
     min-width: 50%;
     display: grid;
     grid-template-columns: 2fr 2fr 1fr;
-    grid-template-rows: auto .5fr 1fr 1fr 2fr;
+    grid-template-rows: auto .5fr 1fr 1fr 2fr 1fr;
     grid-gap: .5em;
 }
 aside > h3{
@@ -268,9 +274,17 @@ address{
     margin-top: 3%;
     
 }
+.socialicons{
+    height: 20px;
+    grid-column: 1/2;
+    grid-row: 6;
+    display: flex;
+    fill:#666;
+}
+
 .bread{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1.5fr 1fr;
     grid-template-areas: ;
     width: 100%;
     padding: 0% 5% 0% 5%;
@@ -326,7 +340,7 @@ address{
 .svgDER-o{
     position: absolute;
     bottom: -1px;
-    right: -11.5%;
+    right: -13%;
     height: 12vw;
     fill: #288992;
 }
@@ -466,7 +480,13 @@ address{
     .SERV2 .carousel{
         width: 100%;
     }
-  
+    footer{
+        flex-direction: column;
+    }
+    .bread{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 1fr 1fr ;
+    }
     .QS-Azul{
     background: #59BEC9;
     padding: 5%;
