--- a/css/slider.css
+++ b/css/slider.css
@@ -33,7 +33,7 @@
 	margin: 0;
 }
 body{
-    width: 100vw;
+    max-width: 100vw;
     height: 100%;
     color: #666666;
     font-family: 'wotfardregular';
@@ -41,12 +41,14 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
 /*
 img{
     width: 100%;
     height: auto;
 }
 */
+
 h1{
     padding-bottom: 5%;
     font-size: 3rem;
@@ -197,12 +199,12 @@ button{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr 1fr;
-    width: 80%;
+    width: 100%;
     grid-template-areas:
         'foto titulo'
         'foto texto'
         'foto boton';
-    padding: 5% 0;
+    padding: 5% 10%;
     color: white;
     position: relative;
 }
@@ -237,11 +239,15 @@ footer{
     min-width: 100%;
     padding: 5%;
 }
+.imgfooter{
+    grid-row: 7;
+    grid-column: span 2;
+}
 aside{
     min-width: 50%;
     display: grid;
     grid-template-columns: 2fr 2fr 1fr;
-    grid-template-rows: auto .5fr 1fr 1fr 2fr 1fr;
+    grid-template-rows: auto .5fr 1fr 1fr 2fr .5fr 1fr;
     grid-gap: .5em;
 }
 aside > h3{
@@ -340,7 +346,7 @@ address{
 .svgDER-o{
     position: absolute;
     bottom: -1px;
-    right: -13%;
+    right: 0%;
     height: 12vw;
     fill: #288992;
 }
