quitando biblioteca y cambiando fondo y color de texto en contacto

--- a/css/slider.css
+++ b/css/slider.css
@@ -272,6 +272,8 @@ footer{
     display: flex;
     min-width: 100%;
     padding: 5%;
+    background-color: #288992;
+    color: white;
 }
 .imgfooter{
     grid-row: 7;
