--- a/css/slider.css
+++ b/css/slider.css
@@ -365,7 +365,7 @@ address{
     padding: 5%;
     color: white;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr;
     grid-row-gap: 1em;
     position: relative;
 }
