--- a/css/slider.css
+++ b/css/slider.css
@@ -334,7 +334,7 @@ address{
     grid-template-columns: 1fr 1fr 1fr 1fr 1.5fr 1fr;
     grid-template-areas: ;
     width: 100%;
-    padding: 0% 5% 0% 5%;
+    padding: 5% 8% 5% 8%;
     margin-bottom: 5%;
     justify-items: center;
 }
@@ -362,7 +362,7 @@ address{
 }
 .QS-Azul{
     background: #59BEC9;
-    padding: 5%;
+    padding: 5% 10% 5% 10%;
     color: white;
     display: grid;
     grid-template-columns: 1fr;
@@ -392,15 +392,15 @@ address{
     fill: #288992;
 }
 .Historia{
-    padding: 5%;
+    padding: 5% 10% 5% 10%;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1.2fr 1fr;
+    grid-column-gap: 5%;
     position: relative;
-    
 }
 
 .sliderHistoria{
-    
+    padding-top: 15%;
 }
 .Equipo{
     padding: 5%;
@@ -542,4 +542,7 @@ address{
     grid-template-columns: 1fr;
     grid-row-gap: 1em;
 }
+    .Historia{
+        grid-template-columns: 1fr;
+    }
 }
