--- a/css/slider.css
+++ b/css/slider.css
@@ -94,6 +94,15 @@ hr{
 .enmobilhey{
     height: 2rem;
 }
+.botonLink{
+    background-color: #59B4BF;
+    border: none;
+    border-radius: 1em;
+    padding: 2%;
+    color: white;
+    height: 50px;
+    width: 20%;
+}
 .carousel-item{
 }
 
@@ -474,7 +483,9 @@ address{
 .bredtitulo{
     font-family: 'wotfardsemibold';
 }
-
+.tituloSolucion{
+    color: #59B2BD;
+}
 .ventajas{
     grid-column: span 2;
     padding-bottom: 5%;
@@ -482,9 +493,21 @@ address{
 }
 .tituloVentajas{
     padding-bottom: 3%;
+    color: #59B2BD;
 }
 .levantamiento{
     grid-column: span 2;
+    padding-bottom: 5%;
+    color: #59B2BD;
+}
+.beneficios{
+    width: 100%;
+    background-color: #288790;
+    color: white;
+    padding: 5% 10% 5% 10%;
+}
+.beneficios h3{
+    color: white;
     padding-bottom: 5%;
 }
 @media only screen and (max-width: 800px) {
