--- a/css/slider.css
+++ b/css/slider.css
@@ -217,6 +217,9 @@ button{
     grid-area: foto;
     
 }
+.Historia h3{
+    margin-bottom: 5%;
+}
 .SERV{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -280,13 +283,13 @@ form{
 footer{
     display: flex;
     min-width: 100%;
-    padding: 5%;
+    padding: 5% 10%;
     background-color: #288992;
     color: white;
 }
 .imgfooter{
     margin-right: auto;
-    padding-left: 5%;
+    padding-left: 10%;
     padding-bottom: 2%;
     padding-top: 2%;
 }
@@ -340,12 +343,12 @@ address{
 
 .bread{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1.5fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 3fr;
     grid-template-areas: ;
     width: 100%;
-    padding: 5% 8% 5% 8%;
+    padding: 5% 10%;
     margin-bottom: 5%;
-    justify-items: center;
+    justify-items: flex-start;
 }
 .links{
     display: flex;
@@ -356,6 +359,10 @@ address{
 }
 .links a{
     color: #59B4BF;
+}
+
+.ultimis{
+    margin-left: auto;
 }
 .enviar{
     max-width: 30%;
