--- a/css/slider.css
+++ b/css/slider.css
@@ -32,6 +32,14 @@
 *{
 	margin: 0;
 }
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: none;
+/*    border-bottom: 2px solid red;*/
+}
+}
 body{
     max-width: 100vw;
     height: 100%;
@@ -152,21 +160,21 @@ hr{
 .btnclaro{
     background-color: #59B4BF;
     border: none;
-    border-radius: 15em;
+    border-radius: 1em;
     padding: 2%;
     color: white;
     height: 50px;
+    width: 30%;
     text-align: center;
 }
 .btnobscuro{
     background-color: #288992;
-     border: none;
-    border-radius: 15em;
-    padding: 1.5%;
+    border: none;
+    border-radius: 1em;
+    padding: 2%;
     color: white;
     height: 50px;
     text-align: center;
-    min-width: 200px;
 }
 button{
     background-color: #59B4BF;
