--- a/css/slider.css
+++ b/css/slider.css
@@ -37,6 +37,7 @@ a{
 }
 a:hover{
     text-decoration: none;
+    color: #EB451B;
 /*    border-bottom: 2px solid red;*/
 }
 }
@@ -88,13 +89,31 @@ hr{
 }
 .nav-link{
     color: white !important;
+    position: relative;
+}
+.nav-link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 3px;
+    background: #EB451B;
+    transform: scaleX(0);
+/*    transform-origin: left;*/
+    transition: transform 250ms ease-in;
+}
+.nav-link:hover::after {
+    transform: scaleX(1)
 }
 .colorlink{
     color: #59B4BF !important;
 }
+/*
 li a:hover{
     border-bottom: 3px solid #EB451B;
 }
+*/
 
 .compressed{
     background: white;
