--- a/css/slider.css
+++ b/css/slider.css
@@ -37,7 +37,7 @@ a{
 }
 a:hover{
     text-decoration: none;
-    color: #EB451B;
+/*    color: #EB451B;*/
 /*    border-bottom: 2px solid red;*/
 }
 }
@@ -203,6 +203,32 @@ li a:hover{
     color: white;
     height: 50px;
     text-align: center;
+    position: relative;
+    z-index: 1;
+}
+.btnobscuro::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 1em;
+    background-color: rgba(0, 0, 0, 0.3);
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 100ms ease-in;
+    
+    z-index: -1;
+}
+.btnobscuro:hover{
+    color: white;
+    font-weight: 600;
+    
+}
+.btnobscuro:hover::after{
+    transform: scaleY(1);
+    border-radius: 1em;
 }
 button{
     background-color: #59B4BF;
