--- a/css/slider.css
+++ b/css/slider.css
@@ -194,6 +194,32 @@ li a:hover{
     height: 50px;
     width: 30%;
     text-align: center;
+    position: relative;
+    z-index: 1;
+}
+.btnclaro::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 1em;
+    background-color: rgba(0, 0, 0, 0.3);
+    transform: scaleY(0);
+/*    transform-origin: left;*/
+    transition: transform 100ms ease-in;
+    
+    z-index: -1;
+}
+.btnclaro:hover{
+    color: white;
+    font-weight: 600;
+    
+}
+.btnclaro:hover::after{
+    transform: scaleY(1);
+    border-radius: 1em;
 }
 .btnobscuro{
     background-color: #288992;
