--- a/css/slider.css
+++ b/css/slider.css
@@ -126,13 +126,13 @@ li a:hover{
 }
 .botonLink{
     background-color: #59B4BF;
+    background-color: #59B4BF;
     border: none;
     border-radius: 1em;
-    padding: 2%;
+    padding: 0.75rem 1rem;
     color: white;
-    height: 50px;
-    width: 30%;
     text-align: center;
+    width: 50%;
 }
 .carousel-item{
 }
@@ -277,7 +277,7 @@ button{
         'texto foto'
         'boton foto';
     padding: 3% 10% 1% 10%;
-    background-color: #59B4BF;
+    background-color: #59BEC9;
     color: white;
     position: relative;
 }
@@ -297,10 +297,10 @@ button{
 }
 .boton{
     grid-area: boton;
-    width: 170px;
-    height: 50px;
+    width: 13rem;
     font-size: 16px;
     text-align: center;
+    padding: .75rem 1rem;
     
 }
 .foto{
@@ -321,8 +321,17 @@ button{
         'titulo foto'
         'texto foto'
         'boton foto';
-    padding: 5% 10%;
+    padding: 5% 10% 0 10%;
     color: white;
+}
+.SERV::after{
+    content: '';
+    height: .15em;
+    background-color: gray;
+    width: 100%;
+    grid-column: span 2;
+    margin-top: 5rem;
+    
 }
 .SERV .titulo{
     color: #59BEC9;
@@ -382,20 +391,21 @@ footer{
 .imgfooter{
     margin-right: auto;
     padding-left: 10%;
-    padding-bottom: 2%;
-    padding-top: 2%;
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
 }
 aside{
     min-width: 50%;
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
-    grid-template-rows: auto .5fr 1fr 1fr 2fr .5fr 1fr;
-    grid-gap: .5em;
+    grid-template-columns: 1fr;
+    grid-template-rows: .2fr .6fr .2fr;
+    
 }
 aside > h3{
     grid-column: 1 / -1;
 }
 
+/*
 aside > button{
     grid-column: 1 / 2;
     grid-row: 3;
@@ -411,10 +421,11 @@ aside > button:nth-child(3){
     grid-column: 1 / span 1;
     grid-row: 4;
 }
+*/
 
 aside > address{
-    grid-column: 1 / 4;
-    grid-row: 5;
+    grid-column: 1 / -1;
+    grid-row: 2;
 }
 address{
     display: flex;
@@ -426,11 +437,17 @@ address{
     color: white;
 }
 .socialicons{
-    height: 20px;
-    grid-column: 1/2;
-    grid-row: 6;
+    height: 1.5rem;
+    grid-column: span 1;
+    grid-row: 3;
     display: flex;
     fill: white;
+    width: 50%;
+}
+.socialicons svg{
+    height: 100%;
+
+    
 }
 
 .bread{
@@ -438,8 +455,7 @@ address{
     grid-template-columns: 1fr 1fr 1fr 3fr;
     grid-template-areas: ;
     width: 100%;
-    padding: 5% 10%;
-    margin-bottom: 5%;
+    padding: 2% 10%;
     justify-items: flex-start;
 }
 .links{
@@ -491,7 +507,7 @@ address{
     bottom: -1px;
     right: 0%;
     height: 12vw;
-    fill: #59B4BF;
+    fill: #59BEC9;
 }
 .svgDER-o{
     position: absolute;
@@ -615,26 +631,33 @@ address{
     padding: 5% 10% 5% 10%;
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: .3fr 1.5fr auto .3fr auto;
     position: relative;
     width: 100%;
     color: #808080;
 }
 .comoResuelve h3{
     
-    padding-bottom: 3%;
+    margin-bottom: 2rem;
 }
 .comoResuelve h4{
-    padding-top: 3%;
-    padding-bottom: 3%;
+    margin-top: 5%;
+    margin-bottom: 3%;
+    color: #59B2BD;
 }
 .certificadoFases{
     display: grid;
-    grid-template-columns: 1fr .7fr 1fr;
+    grid-template-columns:  auto 1fr auto;
     grid-column-gap: 50px;
+    
 }
 .servCERT{
     display: flex;
     color: #59B2BD;
+    height: 100%;
+
+    margin-bottom: 3rem;
+    
 }
 .imgCERT{
     padding-right: 5%;
@@ -646,11 +669,12 @@ address{
     grid-column-gap: 50px;
 }
 .ModeloG > .gestMod h5{
-    min-height: 10%;
+    min-height: 0009%;
+    color: #666666;
     
 }
 .ModeloG > .gestMod p{
-    margin: 2em 0;
+    margin: 1em 0;
     
 }
 .ModeloG > .gestMod .imgGEST{
@@ -712,7 +736,11 @@ address{
             'foto'
             'texto'
             'boton';
+        padding: 10% 10%;
             
+    }
+    .fotoQS{
+        display: none;
     }
     .SERV{
         grid-template-columns: auto;
@@ -722,7 +750,13 @@ address{
             'foto'
             'texto'
             'boton';
+        padding-top: 10%;
+        padding-bottom: 0;
     }
+    .SERV::after{
+    margin-bottom: 2rem;
+    
+}
     .SERV .carousel{
         width: 100%;
     }
@@ -734,16 +768,34 @@ address{
             'foto'
             'texto'
             'boton';
+        padding-bottom: 10%;
     }
     .SERV2 .carousel{
         width: 100%;
     }
+    .comoResuelve h4{
+    margin-top: 7%;
+    margin-bottom: 7%;
+}
+    .beneficios{
+        padding: 10% 10%;
+    }
     footer{
         flex-direction: column;
+        padding: 10% 10%;
+        
+    }
+    .socialicons{
+        width: 50%;
+        height: 1rem;
+        margin-left: auto;
+    }
+    aside{
+    
     }
     .bread{
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-areas: 1fr 1fr ;
+        grid-template-columns: 1fr 1fr 1fr 0.5fr;
+        font-size: 0.75rem
     }
     .QS-Azul{
     background: #59BEC9;
