--- a/css/slider.css
+++ b/css/slider.css
@@ -61,11 +61,11 @@ object-fit: cover;
 
 h1{
     padding-bottom: 5%;
-    font-size: 3rem;
+    font-size: 2.25rem;
     font-family: 'wotfardmedium';
 }
 h3{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: 'wotfardmedium';
 }
 hr{
@@ -90,6 +90,7 @@ hr{
 .nav-link{
     color: white !important;
     position: relative;
+    font-weight: 600;
 }
 .nav-link::after {
     content: "";
@@ -733,6 +734,9 @@ address{
     text-align: left;
 }
     .carousel-caption h1{
+        font-size: 1.8rem;
+    }
+    article h3{
         font-size: 1.8rem;
     }
     .texto{
