--- a/css/slider.css
+++ b/css/slider.css
@@ -138,7 +138,7 @@ li a:hover{
 .carousel-item{
 }
 .carBD{
-    max-height: 30em;
+    max-height: 40vw;
     overflow: hidden;
 }
 .vimeo-wrapper{
