--- a/css/slider.css
+++ b/css/slider.css
@@ -298,7 +298,7 @@ button{
 .titulo{
     align-self: end;
     grid-area: titulo;
-    font-size: 36px;
+    font-size: 2.25rem;
     padding-bottom: 5%
 }
 .texto{
@@ -452,7 +452,7 @@ address{
     grid-column: span 1;
     grid-row: 3;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     fill: white;
     width: 50%;
 }
