--- a/css/slider.css
+++ b/css/slider.css
@@ -137,6 +137,9 @@ li a:hover{
     width: 50%;
 }
 .carousel-item{
+/*    background-color: black;*/
+}
+.carousel-item img{
 }
 .carBD{
     max-height: 40vw;
@@ -148,6 +151,10 @@ li a:hover{
     display: block;
     top: 50%;
     left: 50%;
+    opacity: 0.7;
+}
+.obscuro{
+   opacity: 0.75;
 }
 .carousel-control-next, .carousel-control-prev{
     top: 80%;
@@ -487,6 +494,10 @@ address{
 
 .ultimis{
     margin-left: auto;
+    flex-direction: row;
+}
+.ultimis img{
+    width: 20%;
 }
 .enviar{
     max-width: 30%;
@@ -739,7 +750,7 @@ address{
     text-align: left;
 }
     .carousel-caption h1{
-        font-size: 1.8rem;
+        font-size: 1.3rem;
     }
     article h3{
         font-size: 1.8rem;
@@ -815,6 +826,9 @@ address{
     .bread{
         grid-template-columns: 1fr 1fr 1fr 0.5fr;
         font-size: 0.75rem
+    }
+    .ultimis img{
+        width: 80%;
     }
     .QS-Azul{
     background: #59BEC9;
